--- a/index.html
+++ b/index.html
@@ -4,13 +4,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="app.js"></script>
+    <script src="app.js" defer></script>
     <link rel="stylesheet" href="style.css">
     <title>sharia</title>
 </head>
 <body>
 
-    
+    <div class="wrapper">
+        <div class="container"></div>
+    </div>
 
 </body>
 </html>
